platform_versioned_docs/version-24.1.0/enterprise/_templates/k8s/data_studios/proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect-proxy
  labels:
    app.kubernetes.io/component: tower-connect-proxy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: tower-connect-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/component: tower-connect-proxy
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: proxy
          image: cr.seqera.io/private/nf-tower-enterprise/data-studio/connect-proxy:0.7.0
          command:
            - serve
          ports:
            - containerPort: 80
              name: proxy
---
apiVersion: v1
kind: Service
metadata:
  name: connect-proxy
  labels:
    app.kubernetes.io/component: tower-connect-proxy
spec:
  type: NodePort
  ports:
    - port: 80
      name: connect-proxy
      targetPort: proxy
  selector:
    app.kubernetes.io/component: tower-connect-proxy
