platform_versioned_docs/version-24.1.0/enterprise/_templates/k8s/data_studios/server.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: connect-server
  namespace: connect-stage
  labels:
    app.kubernetes.io/component: connect-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: connect-server
  serviceName: connect-server
  template:
    metadata:
      labels:
        app.kubernetes.io/component: connect-server
    spec:
      nodeSelector: 
        kubernetes.io/arch: amd64
      containers:
        - name: server
          image: 195996028523.dkr.ecr.eu-west-1.amazonaws.com/nf-tower/data-studio/tower-connect-server:v0.6.12
          ports:
            - containerPort: 7070
              name: server
            - containerPort: 7777
              name: entrypoint
---
apiVersion: v1
kind: Service
metadata:
  name: connect-server
  namespace: connect-stage
  labels:
    app.kubernetes.io/component: connect-server
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8080
      targetPort: server
      name: server
    - port: 7777
      targetPort: entrypoint
      name: entrypoint
  selector:
    app.kubernetes.io/component: connect-server
