platform_versioned_docs/version-24.1.0/enterprise/_templates/k8s/data_studios/ingress.aks.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
          { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:011206878118:certificate/8a383c6f-e948-4253-b791-f7046c536f61
    alb.ingress.kubernetes.io/group.name: tower-stage
    alb.ingress.kubernetes.io/group.order: "400"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: |-
      idle_timeout.timeout_seconds=301, routing.http2.enabled=false
      , deletion_protection.enabled=true
      , routing.http.drop_invalid_header_fields.enabled=true
      , access_logs.s3.enabled=true,access_logs.s3.bucket=staging-tower-alb-access-log,access_logs.s3.prefix=tower
    alb.ingress.kubernetes.io/load-balancer-name: tower-stage
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/tags: CreatedBy=DevOps, VantaOwner=adianny@seqera.io,
      VantaDescription=Nextflow Tower ALB, Environment=staging
    kubernetes.io/ingress.class: alb
  name: connect-ingress
spec:
  rules:
    - host: "*.connect.cloud.stage-seqera.io"
      http:
        paths:
          - backend:
              service:
                name: connect-proxy
                port:
                  number: 80
            pathType: ImplementationSpecific
            path: /*
